--- a/labs/1/css/styles.css
+++ b/labs/1/css/styles.css
@@ -108,8 +108,12 @@ ul{
 
 #mugshot{
   border-radius: 20px;
-  width: 80%;
-  height: 80%;
 }
 
-
+main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
