--- a/homework/4/parallax.css
+++ b/homework/4/parallax.css
@@ -1,3 +1,12 @@
+.flip-H{
+	-moz-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	transform: scaleX(-1);
+	-ms-filter: fliph;
+	filter: fliph;
+	
+}
 
 #gameWindow{
 	overflow:hidden;
